--- a/style.scss
+++ b/style.scss
@@ -2,6 +2,10 @@ body {
   background-color: powderblue;
 }
 
-h1 {
-  font-size: 160;
+.title {
+  position: absolute;
+  top: 50%;
+  width: 100%;
+  text-align: center;
+  font-size: 18px;
 }
