--- a/style.scss
+++ b/style.scss
@@ -3,9 +3,9 @@ body {
 }
 
 .title {
-  position: absolute;
-  top: 50%;
-  width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
   text-align: center;
-  font-size: 50px;
+  min-height: 100vh;
 }
