--- a/style.scss
+++ b/style.scss
@@ -2,7 +2,7 @@ body {
   background-color: powderblue;
 }
 
-.title {
+title {
   display: flex;
   justify-content: center;
   align-items: center;
