--- a/style.scss
+++ b/style.scss
@@ -4,8 +4,6 @@ body {
 
 title {
     position: absolute;
-    top: 50%;
-    left: 50%;
-    margin-right: -50%;
-    transform: translate(-50%, -50%);
+    text-align: center;
+    vertical-align: middle;
 }
