--- a/style.scss
+++ b/style.scss
@@ -2,7 +2,7 @@ body {
     background-color: powderblue;
 }
 
-title {
+.title {
     position: absolute;
     text-align: center;
     vertical-align: middle;
