--- a/style.css
+++ b/style.css
@@ -4,7 +4,8 @@ body {
 
 .title {
     position: absolute;
-    text-align: center;
-    vertical-align: middle;
-    font-size: 30px;
+    top: 50%;
+    left: 50%;
+    margin-right: -50%;
+    transform: translate(-50%, -50%);
 }
