--- a/style.css
+++ b/style.css
@@ -6,6 +6,6 @@ body {
     display: flex;
     justify-content: center;
     align-items: center;
-    text-align: center;
+    text-align: top;
     min-height: 100vh;
 }
